# monty-plugin

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  nightly-oras.yml  release-oras.yml
src/: function_calls.rs  lib.rs  monty.rs  monty_object.schema.json  os_calls.rs  python_args.rs  types.rs
