[package]
name = "monty"
version = "0.1.0"
edition = "2024"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
base64-serde = "0.8"
chrono = { version = "0.4", features = ["serde"] }
extism-pdk = "1.4"
git-version = "0.3"
monty = { git = "https://github.com/pydantic/monty", rev = "a6352cbff06d4bc79672e62660e993742305c6e9" }
schemars = "1.2"
oauth2 = { version = "5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
jsonschema = "0.45"
tempfile = "3"

[workspace]

[package.metadata.release]
publish = false
push = true
tag = true
tag-name = "v{{version}}"
